[gd_scene load_steps=35 format=3 uid="uid://laoj058aolam"]

[ext_resource type="Script" path="res://scenes/cow.gd" id="1_b74v2"]
[ext_resource type="Texture2D" uid="uid://nf42y2ol8cqp" path="res://assets/Sprites/cows_spritesheet_black0.png" id="2_xa2ia"]
[ext_resource type="PackedScene" uid="uid://di3vew5cwkgxr" path="res://dialogue/dialogue.tscn" id="3_3v8n4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wf424"]
radius = 4.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5c0k4"]
atlas = ExtResource("2_xa2ia")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gq26"]
atlas = ExtResource("2_xa2ia")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_my24k"]
atlas = ExtResource("2_xa2ia")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ab316"]
atlas = ExtResource("2_xa2ia")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaspx"]
atlas = ExtResource("2_xa2ia")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qafuc"]
atlas = ExtResource("2_xa2ia")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rsgt"]
atlas = ExtResource("2_xa2ia")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5riri"]
atlas = ExtResource("2_xa2ia")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1jn2"]
atlas = ExtResource("2_xa2ia")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo6pv"]
atlas = ExtResource("2_xa2ia")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kehvc"]
atlas = ExtResource("2_xa2ia")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rhfq"]
atlas = ExtResource("2_xa2ia")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oraml"]
atlas = ExtResource("2_xa2ia")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8tk3"]
atlas = ExtResource("2_xa2ia")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lxh5"]
atlas = ExtResource("2_xa2ia")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_voqml"]
atlas = ExtResource("2_xa2ia")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm8j4"]
atlas = ExtResource("2_xa2ia")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rpes"]
atlas = ExtResource("2_xa2ia")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0dhl"]
atlas = ExtResource("2_xa2ia")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxmjc"]
atlas = ExtResource("2_xa2ia")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8k5q"]
atlas = ExtResource("2_xa2ia")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bl1pv"]
atlas = ExtResource("2_xa2ia")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_168r3"]
atlas = ExtResource("2_xa2ia")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xaiml"]
atlas = ExtResource("2_xa2ia")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvjnx"]
atlas = ExtResource("2_xa2ia")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6a73g"]
atlas = ExtResource("2_xa2ia")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifxvn"]
atlas = ExtResource("2_xa2ia")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lvnk"]
atlas = ExtResource("2_xa2ia")
region = Rect2(96, 192, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ax550"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5c0k4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gq26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my24k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ab316")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaspx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my24k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gq26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qafuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rsgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5riri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1jn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo6pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kehvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rhfq")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.8,
"texture": SubResource("AtlasTexture_oraml")
}, {
"duration": 1.8,
"texture": SubResource("AtlasTexture_n8tk3")
}, {
"duration": 1.8,
"texture": SubResource("AtlasTexture_2lxh5")
}, {
"duration": 1.8,
"texture": SubResource("AtlasTexture_voqml")
}],
"loop": true,
"name": &"walk_d",
"speed": 5.0
}, {
"frames": [{
"duration": 2.3,
"texture": SubResource("AtlasTexture_gm8j4")
}, {
"duration": 2.3,
"texture": SubResource("AtlasTexture_4rpes")
}, {
"duration": 2.3,
"texture": SubResource("AtlasTexture_o0dhl")
}, {
"duration": 2.3,
"texture": SubResource("AtlasTexture_fxmjc")
}],
"loop": true,
"name": &"walk_l",
"speed": 5.0
}, {
"frames": [{
"duration": 2.3,
"texture": SubResource("AtlasTexture_r8k5q")
}, {
"duration": 2.3,
"texture": SubResource("AtlasTexture_bl1pv")
}, {
"duration": 2.3,
"texture": SubResource("AtlasTexture_168r3")
}, {
"duration": 2.3,
"texture": SubResource("AtlasTexture_xaiml")
}],
"loop": true,
"name": &"walk_r",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_kvjnx")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_6a73g")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_ifxvn")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_0lvnk")
}],
"loop": true,
"name": &"walk_u",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_e78tk"]
radius = 20.0

[node name="cow" type="CharacterBody2D"]
script = ExtResource("1_b74v2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_wf424")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CollisionShape2D"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.3625, 0)
scale = Vector2(1.08516, 1)
sprite_frames = SubResource("SpriteFrames_ax550")
animation = &"idle"
frame_progress = 0.0650697
flip_h = true

[node name="chat_detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection"]
shape = SubResource("CircleShape2D_e78tk")

[node name="Dialogue" parent="chat_detection/CollisionShape2D" instance=ExtResource("3_3v8n4")]

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="chat_detection" to="." method="_on_chat_detection_body_entered"]
[connection signal="body_exited" from="chat_detection" to="." method="_on_chat_detection_body_exited"]
[connection signal="dialogue_finished" from="chat_detection/CollisionShape2D/Dialogue" to="." method="_on_dialogue_dialogue_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
